--- a/brick/brick.yaml
+++ b/brick/brick.yaml
@@ -1,6 +1,7 @@
 name: very_good_docs_site
 description: A Very Good documentation site created by Very Good Ventures.
-version: 0.1.0
+repository: https://github.com/VeryGoodOpenSource/very_good_docs_site
+version: 0.0.1
 
 environment:
   mason: ">=0.1.0-dev.26 <0.1.0"
