ci: use semantic pull request

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,9 @@ on:
       - "src/very_good_docs_site/**"
 
 jobs:
+  semantic-pull-request:
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
+
   build:
     runs-on: ubuntu-latest
 
