--- a/brick/config.json
+++ b/brick/config.json
@@ -1,6 +1,6 @@
 {
   "project_name": "test_docs_site",
-  "executable_name": "very_good_ventures",
+  "org_name": "very_good_ventures",
   "description": "A Very Good Documentation Site",
   "publishable": false
 }
